--- a/web/index.html
+++ b/web/index.html
@@ -15,11 +15,17 @@
         body {
             font-family: Arial, sans-serif;
         }
+        #progress {
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
     <h1>Photo Mapper</h1>
     <input type="file" id="fileInput" accept="image/*" multiple>
+    <div id="progress">
+        <p id="progressText"></p>
+    </div>
     <div id="map"></div>
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
